2023-07-31T08:20:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5712340825 # 1039
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-31
* notice: last 14d: unq all: 6 39
* notice: prev accum: outdated-unq outdated-all / unq all: 563 899 / 586 938
* notice: next accum: outdated-unq outdated-all / unq all: 563 899 / 588 940
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-17 2023-07-31]

2023-07-30T16:17:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5707211242 # 1037
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: last 14d: unq all: 5 39
* notice: prev accum: outdated-unq outdated-all / unq all: 561 897 / 586 937
* notice: next accum: outdated-unq outdated-all / unq all: 563 899 / 586 938
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-07-16] / [2023-07-30]

2023-07-30T08:17:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5705155719 # 1036
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: last 14d: unq all: 6 40
* notice: prev accum: outdated-unq outdated-all / unq all: 561 897 / 584 935
* notice: next accum: outdated-unq outdated-all / unq all: 561 897 / 586 937
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-30]

2023-07-30T01:18:46Z: