@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-31T08:20:20Z",
-  "count_outdated" : 899,
-  "uniques_outdated" : 563,
+  "timestamp" : "2023-07-31T16:20:23Z",
+  "count_outdated" : 902,
+  "uniques_outdated" : 565,
   "count" : 940,
   "uniques" : 588,
   "clones" : [
-    {
-      "timestamp": "2023-07-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-18T00:00:00Z",
       "count": 2,
