@@ -1,12 +1,7 @@
 {
-  "count": 39,
+  "count": 38,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2023-07-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-18T00:00:00Z",
       "count": 2,
