@@ -1,3 +1,12 @@
+2023-07-31T16:20:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5717102422 # 1040
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-31
+* notice: last 14d: unq all: 6 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 563 899 / 588 940
+* notice: next accum: outdated-unq outdated-all / unq all: 565 902 / 588 940
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-17] / []
+
 2023-07-31T08:20:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5712340825 # 1039
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-31
